# FractalX

./: .gitignore  CLAUDE.md  CONCEPT.md  Cargo.toml  LICENSE  README.md
src/: attractor.rs  deep.rs  export.rs  ifs.rs  lsystem.rs  main.rs  mandelbrot.rs  palette.rs  terrain.rs
src/shaders/: mandelbrot.wgsl
