[package]
name = "fractalx"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
eframe = { version = "0.35.0", features = ["wgpu"] }
png = "0.18.1"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
pollster = "0.4.0"
