[package]
name = "fractalx"
version = "0.3.0"
edition = "2024"
license = "MIT"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
dashu = "0.4.4"
eframe = { version = "0.35.0", features = ["wgpu"] }
fastrand = "2.4.1"
png = "0.18.1"
rayon = "1.12.0"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
pollster = "0.4.0"
